21_transit_gateway.yml
Parameters:
  EC2ImageId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
  EC2KeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Default: MyMainKey

Resources:

  ################ VPC1 ################
  VPC1:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: '10.1.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPC1

  VPC1Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC1
      CidrBlock: '10.1.0.0/24'
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      MapPublicIpOnLaunch: true

  VPC1SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ping from anywhere, allow 22 from anywhere
      VpcId: !Ref VPC1
      SecurityGroupIngress:
        - CidrIp: '0.0.0.0/0'
          IpProtocol: icmp
          FromPort: -1
          ToPort: -1
        - CidrIp: '0.0.0.0/0'
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-InternetGateway
  
  VPC1GatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC1
      InternetGatewayId: !Ref InternetGateway
  
  VPC1RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC1
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-RouteTable
  
  VPC1Route:
    Type: AWS::EC2::Route
    DependsOn:
         - TransitGatewayAttachment1
    Properties:
      RouteTableId: !Ref VPC1RouteTable
      DestinationCidrBlock: '10.0.0.0/8'
      TransitGatewayId: !Ref TransitGateway

  IGWRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref VPC1RouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  VPC1SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VPC1Subnet
      RouteTableId: !Ref VPC1RouteTable

  VPC1EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref EC2ImageId
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref VPC1SecurityGroup
      KeyName: !Ref EC2KeyPair
      SubnetId: !Ref VPC1Subnet
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-EC2Instance
  

  ################ VPC2 ################
  VPC2:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: '10.2.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPC2
  
  VPC2Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC2
      CidrBlock: '10.2.0.0/24'
      AvailabilityZone: !Select [ 0, !GetAZs '' ]

  VPC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ping from anywhere
      VpcId: !Ref VPC2
      SecurityGroupIngress:
        - CidrIp: '0.0.0.0/0'
          IpProtocol: icmp
          FromPort: -1
          ToPort: -1

  VP2RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC2
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-RouteTable
  
  VPC2Route:
    Type: AWS::EC2::Route
    DependsOn:
         - TransitGatewayAttachment2
    Properties:
      RouteTableId: !Ref VP2RouteTable
      DestinationCidrBlock: '10.0.0.0/8'
      TransitGatewayId: !Ref TransitGateway

  VPC2SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VPC2Subnet
      RouteTableId: !Ref VP2RouteTable

  VPC2EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref EC2ImageId
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref VPC2SecurityGroup
      SubnetId: !Ref VPC2Subnet
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-EC2Instance
  
  ################ VPC3 ################
  VPC3:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: '10.3.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPC3

  VPC3Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC3
      CidrBlock: '10.3.0.0/24'
      AvailabilityZone: !Select [ 0, !GetAZs '' ]

  VPC3SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ping from anywhere
      VpcId: !Ref VPC3
      SecurityGroupIngress:
        - CidrIp: '0.0.0.0/0'
          IpProtocol: icmp
          FromPort: -1
          ToPort: -1

  VP3RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC3
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-RouteTable

  VPC3Route:
    Type: AWS::EC2::Route
    DependsOn:
         - TransitGatewayAttachment3
    Properties:
      RouteTableId: !Ref VP3RouteTable
      DestinationCidrBlock: '10.0.0.0/8'
      TransitGatewayId: !Ref TransitGateway

  VPC3SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VPC3Subnet
      RouteTableId: !Ref VP3RouteTable

  VPC3EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref EC2ImageId
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref VPC3SecurityGroup
      SubnetId: !Ref VPC3Subnet
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-EC2Instance

  ################ Transit Gateway ################
  TransitGateway:
    Type: AWS::EC2::TransitGateway
    Properties:
      Description: !Sub ${AWS::StackName}-TransitGateway
  
  TransitGatewayAttachment1:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      TransitGatewayId: !Ref TransitGateway
      VpcId: !Ref VPC1
      SubnetIds:
        - !Ref VPC1Subnet
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-TransitGatewayAttachment1
  
  TransitGatewayAttachment2:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      TransitGatewayId: !Ref TransitGateway
      VpcId: !Ref VPC2
      SubnetIds:
        - !Ref VPC2Subnet
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-TransitGatewayAttachment2
  
  TransitGatewayAttachment3:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      TransitGatewayId: !Ref TransitGateway
      VpcId: !Ref VPC3
      SubnetIds:
        - !Ref VPC3Subnet
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-TransitGatewayAttachment3
